--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
-/*!
+@import url("https://fonts.googleapis.com/css2?family=Poor+Story&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Xanh+Mono&display=swap"); /*!
  * Bootstrap  v5.2.2 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
  * Copyright 2011-2022 Twitter, Inc.
@@ -29,7 +30,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: pink;
+  --bs-primary: rgb(197, 14, 45);
   --bs-secondary: skyblue;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -37,7 +38,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 255, 192, 203;
+  --bs-primary-rgb: 197, 14, 45;
   --bs-secondary-rgb: 135, 206, 235;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -48,8 +49,8 @@
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
-  --bs-body-bg-rgb: 255, 255, 255;
-  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-body-bg-rgb: 214, 206, 206;
+  --bs-font-sans-serif: "Poor Story", cursive;
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: var(--bs-font-sans-serif);
@@ -57,7 +58,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
-  --bs-body-bg: #fff;
+  --bs-body-bg: rgb(214, 206, 206);
   --bs-border-width: 1px;
   --bs-border-style: solid;
   --bs-border-color: #dee2e6;
@@ -68,8 +69,8 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: pink;
-  --bs-link-hover-color: #cc9aa2;
+  --bs-link-color: rgb(197, 14, 45);
+  --bs-link-hover-color: #9e0b24;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
@@ -110,6 +111,7 @@ hr {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
+  font-family: "Xanh Mono", monospace;
   font-weight: 500;
   line-height: 1.2;
 }
@@ -486,6 +488,7 @@ progress {
 
 .display-1 {
   font-size: calc(1.625rem + 4.5vw);
+  font-family: "Poor Story", cursive;
   font-weight: 300;
   line-height: 1.2;
 }
@@ -497,6 +500,7 @@ progress {
 
 .display-2 {
   font-size: calc(1.575rem + 3.9vw);
+  font-family: "Poor Story", cursive;
   font-weight: 300;
   line-height: 1.2;
 }
@@ -508,6 +512,7 @@ progress {
 
 .display-3 {
   font-size: calc(1.525rem + 3.3vw);
+  font-family: "Poor Story", cursive;
   font-weight: 300;
   line-height: 1.2;
 }
@@ -519,6 +524,7 @@ progress {
 
 .display-4 {
   font-size: calc(1.475rem + 2.7vw);
+  font-family: "Poor Story", cursive;
   font-weight: 300;
   line-height: 1.2;
 }
@@ -530,6 +536,7 @@ progress {
 
 .display-5 {
   font-size: calc(1.425rem + 2.1vw);
+  font-family: "Poor Story", cursive;
   font-weight: 300;
   line-height: 1.2;
 }
@@ -541,6 +548,7 @@ progress {
 
 .display-6 {
   font-size: calc(1.375rem + 1.5vw);
+  font-family: "Poor Story", cursive;
   font-weight: 300;
   line-height: 1.2;
 }
@@ -597,7 +605,7 @@ progress {
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #fff;
+  background-color: rgb(214, 206, 206);
   border: 1px solid var(--bs-border-color);
   border-radius: 0.375rem;
   max-width: 100%;
@@ -1808,13 +1816,13 @@ progress {
 
 .table-primary {
   --bs-table-color: #000;
-  --bs-table-bg: #fff2f5;
-  --bs-table-border-color: #e6dadd;
-  --bs-table-striped-bg: #f2e6e9;
+  --bs-table-bg: #f3cfd5;
+  --bs-table-border-color: #dbbac0;
+  --bs-table-striped-bg: #e7c5ca;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #e6dadd;
+  --bs-table-active-bg: #dbbac0;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #ece0e3;
+  --bs-table-hover-bg: #e1bfc5;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -1991,7 +1999,7 @@ progress {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  background-color: #fff;
+  background-color: rgb(214, 206, 206);
   background-clip: padding-box;
   border: 1px solid #ced4da;
   appearance: none;
@@ -2011,10 +2019,10 @@ progress {
 }
 .form-control:focus {
   color: #212529;
-  background-color: #fff;
-  border-color: #ffe0e5;
+  background-color: rgb(214, 206, 206);
+  border-color: #e28796;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(255, 192, 203, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(197, 14, 45, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.5em;
@@ -2134,7 +2142,7 @@ textarea.form-control-lg {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  background-color: #fff;
+  background-color: rgb(214, 206, 206);
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right 0.75rem center;
@@ -2150,9 +2158,9 @@ textarea.form-control-lg {
   }
 }
 .form-select:focus {
-  border-color: #ffe0e5;
+  border-color: #e28796;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(255, 192, 203, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(197, 14, 45, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2209,7 +2217,7 @@ textarea.form-control-lg {
   height: 1em;
   margin-top: 0.25em;
   vertical-align: top;
-  background-color: #fff;
+  background-color: rgb(214, 206, 206);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -2227,13 +2235,13 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: #ffe0e5;
+  border-color: #e28796;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(255, 192, 203, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(197, 14, 45, 0.25);
 }
 .form-check-input:checked {
-  background-color: pink;
-  border-color: pink;
+  background-color: rgb(197, 14, 45);
+  border-color: rgb(197, 14, 45);
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
@@ -2242,8 +2250,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: pink;
-  border-color: pink;
+  background-color: rgb(197, 14, 45);
+  border-color: rgb(197, 14, 45);
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2273,7 +2281,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23ffe0e5'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23e28796'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -2315,10 +2323,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(255, 192, 203, 0.25);
+  box-shadow: 0 0 0 1px rgb(214, 206, 206), 0 0 0 0.25rem rgba(197, 14, 45, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(255, 192, 203, 0.25);
+  box-shadow: 0 0 0 1px rgb(214, 206, 206), 0 0 0 0.25rem rgba(197, 14, 45, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -2327,7 +2335,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: pink;
+  background-color: rgb(197, 14, 45);
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2339,7 +2347,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: #ffecef;
+  background-color: #eeb7c0;
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2353,7 +2361,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: pink;
+  background-color: rgb(197, 14, 45);
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2365,7 +2373,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: #ffecef;
+  background-color: #eeb7c0;
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -2726,10 +2734,10 @@ textarea.form-control-lg {
 }
 
 .btn {
-  --bs-btn-padding-x: 0.75rem;
+  --bs-btn-padding-x: 30px;
   --bs-btn-padding-y: 0.375rem;
   --bs-btn-font-family: ;
-  --bs-btn-font-size: 1rem;
+  --bs-btn-font-size: 0.75rem;
   --bs-btn-font-weight: 400;
   --bs-btn-line-height: 1.5;
   --bs-btn-color: #212529;
@@ -2802,20 +2810,20 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  --bs-btn-color: #000;
-  --bs-btn-bg: pink;
-  --bs-btn-border-color: pink;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #ffc9d3;
-  --bs-btn-hover-border-color: #ffc6d0;
-  --bs-btn-focus-shadow-rgb: 217, 163, 173;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #ffcdd5;
-  --bs-btn-active-border-color: #ffc6d0;
+  --bs-btn-color: #fff;
+  --bs-btn-bg: rgb(197, 14, 45);
+  --bs-btn-border-color: rgb(197, 14, 45);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #a70c26;
+  --bs-btn-hover-border-color: #9e0b24;
+  --bs-btn-focus-shadow-rgb: 206, 50, 77;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #9e0b24;
+  --bs-btn-active-border-color: #940b22;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: pink;
-  --bs-btn-disabled-border-color: pink;
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: rgb(197, 14, 45);
+  --bs-btn-disabled-border-color: rgb(197, 14, 45);
 }
 
 .btn-secondary {
@@ -2938,19 +2946,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: pink;
-  --bs-btn-border-color: pink;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: pink;
-  --bs-btn-hover-border-color: pink;
-  --bs-btn-focus-shadow-rgb: 255, 192, 203;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: pink;
-  --bs-btn-active-border-color: pink;
+  --bs-btn-color: rgb(197, 14, 45);
+  --bs-btn-border-color: rgb(197, 14, 45);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: rgb(197, 14, 45);
+  --bs-btn-hover-border-color: rgb(197, 14, 45);
+  --bs-btn-focus-shadow-rgb: 197, 14, 45;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: rgb(197, 14, 45);
+  --bs-btn-active-border-color: rgb(197, 14, 45);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: pink;
+  --bs-btn-disabled-color: rgb(197, 14, 45);
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: pink;
+  --bs-btn-disabled-border-color: rgb(197, 14, 45);
   --bs-gradient: none;
 }
 
@@ -3085,7 +3093,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #6c757d;
   --bs-btn-disabled-border-color: transparent;
   --bs-btn-box-shadow: none;
-  --bs-btn-focus-shadow-rgb: 217, 163, 173;
+  --bs-btn-focus-shadow-rgb: 206, 50, 77;
   text-decoration: underline;
 }
 .btn-link:focus-visible {
@@ -3192,7 +3200,7 @@ textarea.form-control-lg {
   --bs-dropdown-link-hover-color: #1e2125;
   --bs-dropdown-link-hover-bg: #e9ecef;
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: pink;
+  --bs-dropdown-link-active-bg: rgb(197, 14, 45);
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-item-padding-x: 1rem;
   --bs-dropdown-item-padding-y: 0.25rem;
@@ -3457,7 +3465,7 @@ textarea.form-control-lg {
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: pink;
+  --bs-dropdown-link-active-bg: rgb(197, 14, 45);
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-header-color: #adb5bd;
 }
@@ -3518,8 +3526,8 @@ textarea.form-control-lg {
 }
 
 .dropdown-toggle-split {
-  padding-right: 0.5625rem;
-  padding-left: 0.5625rem;
+  padding-right: 22.5px;
+  padding-left: 22.5px;
 }
 .dropdown-toggle-split::after, .dropup .dropdown-toggle-split::after, .dropend .dropdown-toggle-split::after {
   margin-left: 0;
@@ -3605,8 +3613,8 @@ textarea.form-control-lg {
   --bs-nav-tabs-border-radius: 0.375rem;
   --bs-nav-tabs-link-hover-border-color: #e9ecef #e9ecef #dee2e6;
   --bs-nav-tabs-link-active-color: #495057;
-  --bs-nav-tabs-link-active-bg: #fff;
-  --bs-nav-tabs-link-active-border-color: #dee2e6 #dee2e6 #fff;
+  --bs-nav-tabs-link-active-bg: rgb(214, 206, 206);
+  --bs-nav-tabs-link-active-border-color: #dee2e6 #dee2e6 rgb(214, 206, 206);
   border-bottom: var(--bs-nav-tabs-border-width) solid var(--bs-nav-tabs-border-color);
 }
 .nav-tabs .nav-link {
@@ -3640,7 +3648,7 @@ textarea.form-control-lg {
 .nav-pills {
   --bs-nav-pills-border-radius: 0.375rem;
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: pink;
+  --bs-nav-pills-link-active-bg: rgb(197, 14, 45);
 }
 .nav-pills .nav-link {
   background: none;
@@ -4290,7 +4298,7 @@ textarea.form-control-lg {
 
 .accordion {
   --bs-accordion-color: #212529;
-  --bs-accordion-bg: #fff;
+  --bs-accordion-bg: rgb(214, 206, 206);
   --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
   --bs-accordion-border-color: var(--bs-border-color);
   --bs-accordion-border-width: 1px;
@@ -4304,13 +4312,13 @@ textarea.form-control-lg {
   --bs-accordion-btn-icon-width: 1.25rem;
   --bs-accordion-btn-icon-transform: rotate(-180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
-  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23e6adb7'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  --bs-accordion-btn-focus-border-color: #ffe0e5;
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(255, 192, 203, 0.25);
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23b10d29'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-focus-border-color: #e28796;
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(197, 14, 45, 0.25);
   --bs-accordion-body-padding-x: 1.25rem;
   --bs-accordion-body-padding-y: 1rem;
-  --bs-accordion-active-color: #e6adb7;
-  --bs-accordion-active-bg: #fff9fa;
+  --bs-accordion-active-color: #b10d29;
+  --bs-accordion-active-bg: #f9e7ea;
 }
 
 .accordion-button {
@@ -4469,10 +4477,10 @@ textarea.form-control-lg {
   --bs-pagination-hover-border-color: #dee2e6;
   --bs-pagination-focus-color: var(--bs-link-hover-color);
   --bs-pagination-focus-bg: #e9ecef;
-  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(255, 192, 203, 0.25);
+  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(197, 14, 45, 0.25);
   --bs-pagination-active-color: #fff;
-  --bs-pagination-active-bg: pink;
-  --bs-pagination-active-border-color: pink;
+  --bs-pagination-active-bg: rgb(197, 14, 45);
+  --bs-pagination-active-border-color: rgb(197, 14, 45);
   --bs-pagination-disabled-color: #6c757d;
   --bs-pagination-disabled-bg: #fff;
   --bs-pagination-disabled-border-color: #dee2e6;
@@ -4614,12 +4622,12 @@ textarea.form-control-lg {
 }
 
 .alert-primary {
-  --bs-alert-color: #664d51;
-  --bs-alert-bg: #fff2f5;
-  --bs-alert-border-color: #ffecef;
+  --bs-alert-color: #76081b;
+  --bs-alert-bg: #f3cfd5;
+  --bs-alert-border-color: #eeb7c0;
 }
 .alert-primary .alert-link {
-  color: #523e41;
+  color: #5e0616;
 }
 
 .alert-secondary {
@@ -4697,7 +4705,7 @@ textarea.form-control-lg {
   --bs-progress-border-radius: 0.375rem;
   --bs-progress-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --bs-progress-bar-color: #fff;
-  --bs-progress-bar-bg: pink;
+  --bs-progress-bar-bg: rgb(197, 14, 45);
   --bs-progress-bar-transition: width 0.6s ease;
   display: flex;
   height: var(--bs-progress-height);
@@ -4754,8 +4762,8 @@ textarea.form-control-lg {
   --bs-list-group-disabled-color: #6c757d;
   --bs-list-group-disabled-bg: #fff;
   --bs-list-group-active-color: #fff;
-  --bs-list-group-active-bg: pink;
-  --bs-list-group-active-border-color: pink;
+  --bs-list-group-active-bg: rgb(197, 14, 45);
+  --bs-list-group-active-border-color: rgb(197, 14, 45);
   display: flex;
   flex-direction: column;
   padding-left: 0;
@@ -4978,17 +4986,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-primary {
-  color: #664d51;
-  background-color: #fff2f5;
+  color: #76081b;
+  background-color: #f3cfd5;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #664d51;
-  background-color: #e6dadd;
+  color: #76081b;
+  background-color: #dbbac0;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #664d51;
-  border-color: #664d51;
+  background-color: #76081b;
+  border-color: #76081b;
 }
 
 .list-group-item-secondary {
@@ -5107,7 +5115,7 @@ textarea.form-control-lg {
 }
 .btn-close:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(255, 192, 203, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(197, 14, 45, 0.25);
   opacity: 1;
 }
 .btn-close:disabled, .btn-close.disabled {
@@ -6608,8 +6616,8 @@ textarea.form-control-lg {
 }
 
 .text-bg-primary {
-  color: #000 !important;
-  background-color: RGBA(255, 192, 203, var(--bs-bg-opacity, 1)) !important;
+  color: #fff !important;
+  background-color: RGBA(197, 14, 45, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-secondary {
@@ -6648,10 +6656,10 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: pink !important;
+  color: rgb(197, 14, 45) !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #ffcdd5 !important;
+  color: #9e0b24 !important;
 }
 
 .link-secondary {
